Deviseのインストールとセットアップ

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,11 @@
   </head>
 
   <body>
+    <% if notice.nil? %>
+      <p class="notice"><%= notice %></p>
+    <% elsif alert.nil? %>
+      <p class="alert"><%= alert %></p>
+    <% end %>
     <%= yield %>
   </body>
 </html>
