Flashメッセージの上に余白を設ける

--- a/app/views/layouts/_flash_messages.html.erb
+++ b/app/views/layouts/_flash_messages.html.erb
@@ -1,5 +1,5 @@
 <% if !notice.nil? %>
-  <p class="notice"><%= notice %></p>
+  <p class="alert alert-info"><%= notice %></p>
 <% elsif !alert.nil? %>
-  <p class="alert"><%= alert %></p>
+  <p class="alert alert-danger"><%= alert %></p>
 <% end %>
