--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <%= render 'layouts/flash_messages' %>
-    <%= yield %>
+    <div class="container">
+      <%= render 'layouts/flash_messages' %>
+      <%= yield %>
+    </div>
   </body>
 </html>
