--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,7 +1,10 @@
-<h1>プロジェクト一覧</h1>
+<%= link_to 'プロジェクトを作成', new_project_path, class: 'btn btn-info mb-5' %>
+<h2 class="mb-2">プロジェクト一覧</h2>
+<hr>
 <% @projects.each do |project| %>
   <section>
     <h2><%= project.name %></h2>
     <p><%= project.description %></p>
+    <hr>
   </section>
 <% end %>
