Taskの作成と表示の実装

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,2 +1,19 @@
-<p><%= @project.name %></p>
+<h5><%= @project.name %></h5>
 <p><%= @project.description %></p>
+
+<%= form_with(model: @task, local: true) do |f| %>
+  <%= render "shared/error_messages", object: f.object %>
+
+  <%= f.label :name, '名前' %>
+  <%= f.text_field :name %>
+
+  <%= f.hidden_field :project_id, value: @project.id %>
+
+  <%= f.submit 'タスクを作成', class: 'btn btn-outline-info' %>
+<% end %>
+
+<% if @tasks.any? %>
+  <% @tasks.each do |task| %>
+    <p><%= task.name %></p>
+  <% end %>
+<% end %>
