--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,10 +1,9 @@
 <h5><%= @project.name %></h5>
 <p><%= @project.description %></p>
 
-<%= form_with(model: @task, local: true) do |f| %>
+<%= form_with(model: @task, local: true, class: 'mb-5') do |f| %>
   <%= render "shared/error_messages", object: f.object %>
 
-  <%= f.label :name, '名前' %>
   <%= f.text_field :name %>
 
   <%= f.hidden_field :project_id, value: @project.id %>
