--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,18 +1,23 @@
 <h5><%= @project.name %></h5>
 <p><%= @project.description %></p>
 
-<%= form_with(model: @task, local: true, class: 'mb-5') do |f| %>
-  <%= render "shared/error_messages", object: f.object %>
+<%#= form_with(model: @task, local: true, class: 'mb-5') do |f| %>
+  <%#= render "shared/error_messages", object: f.object %>
 
-  <%= f.text_field :name %>
+  <%#= f.text_field :name %>
 
-  <%= f.hidden_field :project_id, value: @project.id %>
+  <%#= f.hidden_field :project_id, value: @project.id %>
 
-  <%= f.submit 'タスクを作成', class: 'btn btn-outline-info' %>
-<% end %>
+  <%#= f.submit 'タスクを作成', class: 'btn btn-outline-info' %>
+<%# end %>
 
 <% if @tasks.any? %>
   <% @tasks.each do |task| %>
-    <p><%= task.name %></p>
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title"><%= task.name %></h5>
+        <%= link_to '削除', task_path(task.id), method: :delete, class: 'card-link' %>
+      </div>
+    </div>
   <% end %>
 <% end %>
