--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,7 +12,7 @@
             <p class="card-text"><%= project.description %></p>
             <%= link_to '詳細', project_path(project.id), class: 'card-link' %>
             <%= link_to '編集', edit_project_path(project.id), class: 'card-link' %>
-            <%= link_to '削除', projects_path(project.id), method: :delete, class: 'card-link', style: 'color: red' %>
+            <%= link_to '削除', project_path(project.id), method: :delete, class: 'card-link', style: 'color: red' %>
           </div>
         </div>
       </div>
