kaminariによるページネーションの実装

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -18,6 +18,7 @@
       </div>
     <% end %>
   </div>
+  <%= paginate @projects %>
 <% else %>
   <div class="jumbotron">
     <h1 class="display-4">Welcome to Rails-todo-app!</h1>
