--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -11,7 +11,7 @@
 
 <% if @tasks.any? %>
   <% @tasks.each do |task| %>
-    <div class="card">
+    <div class="card mb-3">
       <div class="card-body">
         <h5 class="card-title"><%= task.name %></h5>
         <%= link_to '削除', task_path(task.id), method: :delete, class: 'card-link' %>
